02-restrict-registry/02-not-docr.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: just-another-deployment
  labels:
    # Yep, we still need this
    kyverno.dok8s.wowza/label-needed: yesyesyes
spec:
  replicas: 1
  selector:
    matchLabels:
      kyverno.dok8s.wowza/label-needed: yesyesyes
  template:
    metadata:
      labels:
        # We also still need this, I'm too lazy to remove the previous policy
        kyverno.dok8s.wowza/label-needed: yesyesyes
    spec:
      containers:
      - name: some-container
        image: nginx
