02-restrict-registry/01-restrict-to-docr.yaml
apiVersion: kyverno.io/v1
kind: ClusterPolicy
metadata:
  name: docr-only
spec:
  validationFailureAction: enforce
  rules:
  - name: check-container-registry
    match:
      resources:
        kinds:
        - Pod
    validate:
      message: "The image registry must be DOCR"
      pattern:
        spec:
          containers: 
          - image: registry.digitalocean.com/*
